--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,8 @@ body {font-family: "Raleway", Arial, sans-serif}
 
   <!-- Header -->
   <header class="w3-container w3-xlarge w3-padding-24">
-    <a href="#" class="w3-left w3-button w3-white">DAWATI SAMAWATI</a>
-   <!--  <a href="#about" class="w3-right w3-button w3-white">About</a> -->
+    <a href="#" class="w3-left w3-button w3-white">Dawati Samawati</a>
+    <a href="#about" class="w3-right w3-button w3-white">About</a>
   </header>
 
   <!-- Photo Grid -->
