--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <!-- 
   <div style="position: absolute;right: 200px;" > -->
     <div style="display: grid;justify-content: center">
-    <span style="text-transform: uppercase;" id="name" class="center">COUNTRY FACTS</span>
+    <span style="text-transform: uppercase;" id="name" class="center">BLUE DESK</span>
   </div> <br>
 
 <!--   <div id="currency"><span>Currency</span></div>
