--- a/templates/free_trade.html
+++ b/templates/free_trade.html
@@ -3,7 +3,8 @@
   
 
 
-  <div style="position: absolute;right: 200px;"><span class="center">FREE TRADE</span>
+<div style="display: grid;justify-content: center">
+    <span class="center">FREE TRADE</span>
 
     <br>
 
