--- a/templates/maritime_education.html
+++ b/templates/maritime_education.html
@@ -3,7 +3,8 @@
   
 
 
-  <div style="position: absolute;right: 200px;"><span class="center">MARITIME EDUCATION</span></div><br>
+  <div style="display: grid;justify-content: center">
+    <span class="center">MARITIME EDUCATION</span></div><br>
     
 <!--   <div id="currency"><span>Currency</span></div>
   <div id="flag"><span>Flag</span></div>
