--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,8 @@
   
 
 
-  <div  style="position: absolute;right: 200px;"><span class="center">ABOUT</span></div>
+  <div style="display: grid;justify-content: center">
+    <span class="center">ABOUT</span></div>
 <!--   <div id="currency"><span>Currency</span></div>
   <div id="flag"><span>Flag</span></div>
  -->
