--- a/templates/free_trade.html
+++ b/templates/free_trade.html
@@ -1,20 +1,156 @@
-{% extends "base.html" %}
-{% block content %}
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>try</title>
+    <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
+  <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="static/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.css">
+  <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.theme.css">
+  <link rel="stylesheet" href="assets/datepicker/jquery.datetimepicker.min.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="static/css/styles.css">
+  <link rel="stylesheet" href="static/css/w3.css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="static/css/mbr-additional.css" type="text/css">
   
+</head>
+<body>
+
+<!-- <style type="text/css">
+  body{
+    margin: 0px 32.5px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+</style>  --> 
+
+<div class="w3-content" style="max-width:1500px">
+
+{% include 'nav.html' %}
 
 
-<div style="display: grid;justify-content: center">
-    <span class="center">FREE TRADE</span>
-
-    <br>
-
-  
-<!--   <div id="currency"><span>Currency</span></div>
-  </div>
 
 
-  <div id="flag"><span>Flag</span></div>
- -->
 
-{% endblock content %}
 
+  <section class="features6 cid-rOMc65PcX5" id="features06-4b">
+
+    
+
+    
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-12">
+
+                <h4 class="main-title align-center pb-3 mbr-semibold mbr-black mbr-fonts-style display-2"><strong>&nbsp;Free Trade</strong></h4>
+
+            </div>
+
+            <div class="card p-3 col-12 col-md-6 col-lg-3">
+                <div class="card-wrapper">
+
+                    <div class="img-wrapper">
+                        <img src="static/08.jpg" alt="Mobirise">
+                    </div>
+                    <div class="card-box align-left">
+                        <h4 class="card-title align-left mbr-semibold mbr-black mbr-fonts-style display-7">
+                            <strong>Title</strong></h4>
+                        <p class="mbr-text pb-2  mbr-fonts-style display-4">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ullamcorper neque dapibus
+                            ipsum
+                            semper.</p>
+                        <!-- <div class="link-wrap">
+                            <h5 class="link align-left mbr-semibold mbr-black mbr-fonts-style display-4"><a href="#">Read more</a></h5>
+
+                        </div> -->
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="card p-3 col-12 col-md-6 col-lg-3">
+                <div class="card-wrapper">
+
+                    <div class="img-wrapper">
+                        <img src="static/08.jpg" alt="Mobirise">
+                    </div>
+                    <div class="card-box align-left">
+                        <h4 class="card-title align-left mbr-semibold mbr-black mbr-fonts-style display-7">
+                            <strong>Title</strong></h4>
+                        <p class="mbr-text pb-2  mbr-fonts-style display-4">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ullamcorper neque dapibus
+                            ipsum
+                            semper.</p>
+
+                        <!-- <div class="link-wrap">
+                            <h5 class="link align-left mbr-semibold mbr-black mbr-fonts-style display-4"><a href="#">Read more</a></h5>
+
+                        </div> -->
+                    </div>
+
+                </div>
+            </div>
+
+
+
+            <div class="card p-3 col-12 col-md-6 col-lg-3">
+                <div class="card-wrapper">
+
+                    <div class="img-wrapper">
+                        <img src="static/08.jpg" alt="Mobirise">
+                    </div>
+                    <div class="card-box align-left">
+                        <h4 class="card-title align-left mbr-semibold mbr-black mbr-fonts-style display-7">
+                            <strong>Title</strong></h4>
+                        <p class="mbr-text pb-2  mbr-fonts-style display-4">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ullamcorper neque dapibus
+                            ipsum
+                            semper.</p>
+
+                       <!--  <div class="link-wrap">
+                            <h5 class="link align-left mbr-semibold mbr-black mbr-fonts-style display-4"><a href="#">Read more</a></h5>
+
+                        </div> -->
+                    </div>
+
+                </div>
+            </div>
+
+
+
+            <div class="card p-3 col-12 col-md-6 col-lg-3">
+                <div class="card-wrapper">
+
+                    <div class="img-wrapper">
+                        <img src="static/08.jpg" alt="Mobirise">
+                    </div>
+                    <div class="card-box align-left">
+                        <h4 class="card-title align-left mbr-semibold mbr-black mbr-fonts-style display-7">
+                            <strong>Partners</strong></h4>
+                        <p class="mbr-text pb-2  mbr-fonts-style display-4">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ullamcorper neque dapibus
+                            ipsum
+                            semper.</p>
+                       <!--  <div class="link-wrap">
+                            <h5 class="link align-left mbr-semibold mbr-black mbr-fonts-style display-4"><a href="#">Read more</a></h5>
+
+                        </div> -->
+                    </div>
+
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+</section>
+
+
+</div>
+</body>
+</html>
