--- a/templates/base.html
+++ b/templates/base.html
@@ -347,8 +347,8 @@ path:hover, circle:hover {
 
 
 
-   <a style="position: absolute;left: 60px;top: 380px;" href="{{ url_for('martime_education') }}" class="btn btn-outline-info">MARITIME EDUCATION</a>
-<a style="position: absolute;right: 550px;top: 150px;" href="{{ url_for('free_trade') }}" class="btn btn-outline-info">FREE TRADE</a>
+   <a style="position: absolute;left: 60px;top: 380px;" href="{{ url_for('martime_education') }}" class="btn btn-outline-primary">MARITIME EDUCATION</a>
+<a style="position: absolute;right: 550px;top: 150px;" href="{{ url_for('free_trade') }}" class="btn btn-outline-primary">FREE TRADE</a>
 
 
    {% block content %}
