--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% block content %}
 
  
-
+{% include 'map.html' %}
 <!-- 
   <div style="position: absolute;right: 200px;" > -->
     <div style="display: grid;justify-content: center">
