--- a/templates/maritime_education.html
+++ b/templates/maritime_education.html
@@ -1,14 +1,24 @@
 {% extends "base.html" %}
+
+
 {% block content %}
   
-
+{% include 'try.html' %}
 
   <div style="display: grid;justify-content: center">
-    <span class="center">MARITIME EDUCATION</span></div><br>
+    <span class="center">MARITIME EDUCATION</span>
+
+
+    <p>East African Countries</p>
+
+
+
+
+  </div><br>
     
 <!--   <div id="currency"><span>Currency</span></div>
-  <div id="flag"><span>Flag</span></div>
- -->
+  <div id="flag"><span>Flag</span></div> -->
+
 
 {% endblock content %}
 
