--- a/templates/free_trade.html
+++ b/templates/free_trade.html
@@ -55,7 +55,7 @@
                 <div class="card-wrapper">
 
                     <div class="img-wrapper">
-                        <img src="static/08.jpg" alt="Mobirise">
+                        <img src="static/eac.png" alt="Mobirise">
                     </div>
                     <div class="card-box align-left">
                         <h4 class="card-title align-left mbr-semibold mbr-black mbr-fonts-style display-7">
@@ -77,7 +77,7 @@
                 <div class="card-wrapper">
 
                     <div class="img-wrapper">
-                        <img src="static/08.jpg" alt="Mobirise">
+                        <img src="static/eac.png" alt="Mobirise">
                     </div>
                     <div class="card-box align-left">
                         <h4 class="card-title align-left mbr-semibold mbr-black mbr-fonts-style display-7">
@@ -102,7 +102,7 @@
                 <div class="card-wrapper">
 
                     <div class="img-wrapper">
-                        <img src="static/08.jpg" alt="Mobirise">
+                        <img src="static/eac.png" alt="Mobirise">
                     </div>
                     <div class="card-box align-left">
                         <h4 class="card-title align-left mbr-semibold mbr-black mbr-fonts-style display-7">
@@ -127,11 +127,11 @@
                 <div class="card-wrapper">
 
                     <div class="img-wrapper">
-                        <img src="static/08.jpg" alt="Mobirise">
+                        <img src="static/eac.png" alt="Mobirise">
                     </div>
                     <div class="card-box align-left">
                         <h4 class="card-title align-left mbr-semibold mbr-black mbr-fonts-style display-7">
-                            <strong>Partners</strong></h4>
+                            <strong>Title</strong></h4>
                         <p class="mbr-text pb-2  mbr-fonts-style display-4">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ullamcorper neque dapibus
                             ipsum
