--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,35 +1,92 @@
-        <hr>
 
-    <section style="padding-top:20px;padding-bottom: 20px;display: grid;
-" class="footer-wrapper pad-75">
-       <!--  <div class="container"> -->
-            <div class="row">
-                <div class="col-sm-12 text-center">
-                  <!--   <ul class="social-icons-two light list-inline">
-                        <li class="list-inline-item"><a href="#"><i class="icon-google-plus"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="icon-facebook"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="icon-twitter"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="icon-linedin"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="icon-instagram"></i></a></li>
-                    </ul> -->
-                    <p class="copyright-text">Copyrights © 2022 <b >
+<!-- 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+    
+
+<style type="text/css">
+    .footer-basic {
+  padding:40px 0;
+  background-color:#ffffff;
+  color:#4b4c4d;
+}
+
+.footer-basic ul {
+  padding:0;
+  list-style:none;
+  text-align:center;
+  font-size:18px;
+  line-height:1.6;
+  margin-bottom:0;
+}
+
+.footer-basic li {
+  padding:0 10px;
+}
+
+.footer-basic ul a {
+  color:inherit;
+  text-decoration:none;
+  opacity:0.8;
+}
+
+.footer-basic ul a:hover {
+  opacity:1;
+}
+
+.footer-basic .social {
+  text-align:center;
+  padding-bottom:25px;
+}
+
+.footer-basic .social > a {
+  font-size:24px;
+  width:40px;
+  height:40px;
+  line-height:40px;
+  display:inline-block;
+  text-align:center;
+  border-radius:50%;
+  border:1px solid #ccc;
+  margin:0 8px;
+  color:inherit;
+  opacity:0.75;
+}
+
+.footer-basic .social > a:hover {
+  opacity:0.9;
+}
+
+.footer-basic .copyright {
+  margin-top:15px;
+  text-align:center;
+  font-size:13px;
+  color:#aaa;
+  margin-bottom:0;
+}
+
+
+</style>
+
+    <div class="footer-basic">
+        <footer>
+            <div class="social">
+                <a href="#"><i class="icon ion-social-instagram"></i></a>
                
-                    Blue Desk
-
-                    </b><br> 
-                      <a style="text-decoration: none;" href="tel:+254787854165"><b>Tel</b> (+254) 787 854165</a> <br><!-- All Rights Reserved --> 
-                       <!-- <img style="width:80px" src="https://gethsemanebaptistchurch.org/wp-content/uploads/2019/05/youtube-logo-png-transparent-image-5.png"> -->
-
-                      <!--  <img style="width:50px" src="{{ url_for('static', filename='img/googlelogo.png') }}">
-                       -->
-
-                       <a style="text-decoration:none;" href="">Terms & Conditions</a>
-                     </p>
-                  
-                </div>
+                <a href="#"><i class="icon ion-social-twitter"></i></a>
+                <a href="#"><i class="icon ion-social-facebook"></i></a>
             </div>
-  <!--       </div> -->
-    </section>
-    <!-- footer-wrapper --> 
-
-
+            <ul class="list-inline">
+                <li class="list-inline-item"><a href="{{ url_for('root') }}">Home</a></li>
+                
+                <li class="list-inline-item"><a href="{{ url_for('about') }}">About</a></li>
+                <li class="list-inline-item"><a href="{{ url_for('free_trade') }}">Free Trade</a></li>
+                <li class="list-inline-item"><a href="{{ url_for('martime_education') }}">Maritime Education</a></li>
+           
+            </ul>
+            <p class="copyright">Blue Desk © 2022</p>
+        </footer>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+</body>
