--- a/static/css/mbr-additional.css
+++ b/static/css/mbr-additional.css
@@ -8470,7 +8470,7 @@ a {
 }
 .cid-rOMc65PcX5 {
   padding-top: 60px;
-  padding-bottom: 75px;
+  /* padding-bottom: 75px; */
   background-color: #ffffff;
 }
 .cid-rOMc65PcX5 .card-box {
