--- a/templates/free_trade.html
+++ b/templates/free_trade.html
@@ -48,7 +48,9 @@
         <div class="row">
             <div class="col-12 col-md-12">
 
-                <h4 class="main-title align-center pb-3 mbr-semibold mbr-black mbr-fonts-style display-2"><strong>&nbsp;Free Trade</strong></h4>
+
+
+                <h4 class=" align-center pb-3">&nbsp;<a href="{{ url_for('free_trade') }}" class="w3-button w3-white">FREE TRADE</a></h4>
 
             </div>
 
