--- a/static/css/mbr-additional.css
+++ b/static/css/mbr-additional.css
@@ -4835,7 +4835,7 @@ a {
   background-color: #ffffff;
 }
 .cid-rOLjRka4vA .box {
-  background-image: url("../../../assets/images/background17.jpg");
+  background-image: url("../../../static/img/background17.jpg");
   background-size: cover;
   background-position: center;
   height: 600px;
@@ -8450,7 +8450,7 @@ a {
 .cid-rOLpaZYgO9 .block {
   width: 100%;
   height: 400px;
-  background-image: url("../../../assets/images/01.jpg");
+  background-image: url("static/img/01.jpg");
   background-size: 1140px 400px;
   background-position: center;
   display: block;
@@ -8470,7 +8470,7 @@ a {
 }
 .cid-rOMc65PcX5 {
   padding-top: 60px;
-  /* padding-bottom: 75px; */
+  padding-bottom: 75px;
   background-color: #ffffff;
 }
 .cid-rOMc65PcX5 .card-box {
