--- a/templates/free_trade.html
+++ b/templates/free_trade.html
@@ -62,11 +62,9 @@
                     </div>
                     <div class="card-box align-left">
                         <h4 class="card-title align-left mbr-semibold mbr-black mbr-fonts-style display-7">
-                            <strong>Title</strong></h4>
+                            <strong>Tanzania</strong></h4>
                         <p class="mbr-text pb-2  mbr-fonts-style display-4">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ullamcorper neque dapibus
-                            ipsum
-                            semper.</p>
+                            Tanzania is an East African country known for its vast wilderness areas.</p>
                         <!-- <div class="link-wrap">
                             <h5 class="link align-left mbr-semibold mbr-black mbr-fonts-style display-4"><a href="#">Read more</a></h5>
 
@@ -84,11 +82,9 @@
                     </div>
                     <div class="card-box align-left">
                         <h4 class="card-title align-left mbr-semibold mbr-black mbr-fonts-style display-7">
-                            <strong>Title</strong></h4>
+                            <strong>Uganda</strong></h4>
                         <p class="mbr-text pb-2  mbr-fonts-style display-4">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ullamcorper neque dapibus
-                            ipsum
-                            semper.</p>
+                            Uganda is a landlocked country in East Africa whose diverse landscape encompasses the snow-capped Rwenzori Mountains and immense Lake Victoria.</p>
 
                         <!-- <div class="link-wrap">
                             <h5 class="link align-left mbr-semibold mbr-black mbr-fonts-style display-4"><a href="#">Read more</a></h5>
@@ -109,11 +105,9 @@
                     </div>
                     <div class="card-box align-left">
                         <h4 class="card-title align-left mbr-semibold mbr-black mbr-fonts-style display-7">
-                            <strong>Title</strong></h4>
+                            <strong>Rwanda</strong></h4>
                         <p class="mbr-text pb-2  mbr-fonts-style display-4">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ullamcorper neque dapibus
-                            ipsum
-                            semper.</p>
+                            Rwanda, is a landlocked country in the Great Rift Valley of Central Africa, where the African Great Lakes region and Southeast Africa converge..</p>
 
                        <!--  <div class="link-wrap">
                             <h5 class="link align-left mbr-semibold mbr-black mbr-fonts-style display-4"><a href="#">Read more</a></h5>
@@ -134,11 +128,9 @@
                     </div>
                     <div class="card-box align-left">
                         <h4 class="card-title align-left mbr-semibold mbr-black mbr-fonts-style display-7">
-                            <strong>Title</strong></h4>
+                            <strong>DRC</strong></h4>
                         <p class="mbr-text pb-2  mbr-fonts-style display-4">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ullamcorper neque dapibus
-                            ipsum
-                            semper.</p>
+                            The Democratic Republic of the Congo, informally Congo-Kinshasa, DR Congo, is a country in Central Africa.</p>
                        <!--  <div class="link-wrap">
                             <h5 class="link align-left mbr-semibold mbr-black mbr-fonts-style display-4"><a href="#">Read more</a></h5>
 
