--- a/templates/about.html
+++ b/templates/about.html
@@ -4,7 +4,7 @@
 
 {% block content %}
  
-{% include 'map.html' %}
+{% include 'extra.html' %}
 
 
   <div style="display: grid;justify-content: center">
@@ -12,6 +12,9 @@
 <!--   <div id="currency"><span>Currency</span></div>
   <div id="flag"><span>Flag</span></div>
  -->
+
+
+
 
 {% endblock content %}
 
