--- a/templates/base.html
+++ b/templates/base.html
@@ -47,6 +47,15 @@ a{
 
 }
 
+.maritime{
+
+  position: absolute;left: 60px;top: 380px;
+
+}
+
+.trade{
+  position: absolute;right: 550px;top: 150px;
+}
 
 
 .st0, .land, .circle {
@@ -132,10 +141,21 @@ span {
   .map {
     display: inline-block;
     margin: auto;
-    width: 200%;
+    width: 110%;
     padding: 10px;
     border: none;
   }
+
+  .maritime{
+
+  position: absolute;left: 10px;top: 200px;
+
+}
+
+.trade{
+  position: absolute;right: -30px;top: 60px;
+}
+
 
   #flag, #capital, #currency {
     display: inline-block;
