--- a/templates/extra.html
+++ b/templates/extra.html
@@ -171,8 +171,8 @@
 </svg>
    </div>
 
- <a style="position: absolute;left: 60px;top: 380px;" href="{{ url_for('martime_education') }}" class="btn btn-outline-dark">MARITIME EDUCATION</a>
-<a style="position: absolute;right: 550px;top: 150px;" href="{{ url_for('free_trade') }}" class="btn btn-outline-dark">FREE TRADE</a>
+ <a href="{{ url_for('martime_education') }}" class="btn btn-outline-dark maritime">MARITIME EDUCATION</a>
+<a  href="{{ url_for('free_trade') }}" class="btn btn-outline-dark trade">FREE TRADE</a>
 
 
 
