--- a/templates/nav.html
+++ b/templates/nav.html
@@ -49,5 +49,5 @@
 
  <header class="w3-container w3-xlarge w3-padding-24">
     <a href="{{ url_for('root') }}" class="w3-left w3-button w3-white">DAWATI SAMAWATI</a>
-    <a href="{{ url_for('root') }}" class="w3-right w3-button w3-white">ABOUT</a>
+    <a href="{{ url_for('about') }}" class="w3-right w3-button w3-white">ABOUT</a>
   </header>
