--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,11 @@ body {font-family: "Raleway", Arial, sans-serif}
     text-align: center!important;
 }
 
+
+.index{
+  box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px; padding: 20px;margin-left: 30px;
+}
+
 a{
     color: #333;
 }
@@ -136,8 +141,42 @@ span {
     max-width: 90%;
   }
 
+
   /*here width*/
 
+
+  .w3-xlarge {
+    font-size: 20px!important;
+}
+
+  .index{
+  box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px; padding: 20px;
+}
+
+.btn {
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: .375rem .75rem;
+    font-size: 0.7rem;
+    line-height: 1.5;
+    border-radius: .25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.btn-outline-dark {
+    color: #343a40;
+    background-color: transparent;
+    background-image: none;
+    border-color: #343a40;
+}
   .map {
     display: inline-block;
     margin: auto;
@@ -148,7 +187,7 @@ span {
 
   .maritime{
 
-  position: absolute;left: 10px;top: 200px;
+  position: absolute;left: 10px;top: 180px;
 
 }
 
