--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,8 @@ ul.a {
 
  
 {% include 'extra.html' %}
+
+<br>
 <!-- 
   <div style="position: absolute;right: 200px;" > -->
     <div style="display: grid;justify-content: center; padding-bottom: 10px;">
@@ -16,7 +18,7 @@ ul.a {
   </div> 
 
 
-  <div style="box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px; padding: 20px;margin-left: 30px;font-size: 18px;">
+  <div class="index" style="">
 
 
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
