--- a/templates/free_trade.html
+++ b/templates/free_trade.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <title>DAWATI SAMAWATI</title>
     <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
